add about section and contact section. complete all background photos for projects section.

--- a/index.html
+++ b/index.html
@@ -13,48 +13,66 @@
         <h1 id="title">Garret Hildebrandt</h1>
             <nav class="header-nav">   
                 <ul>
-                    <li><a href="#"><strong>About</strong></a></li>
-                    <li><a href="#"><strong>Work</strong></a></li>
-                    <li><a href="#"><strong>Contact</strong></a></li>
-                    <li id="last"><a href="#"><strong>Resume</strong></a></li>
+                    <li><a href="#about"><strong>About</strong></a></li>
+                    <li><a href="#work"><strong>Work</strong></a></li>
+                    <li><a href="#contact"><strong>Contact</strong></a></li>
                 </ul>
             </nav>
         </header>
 </section>
-<br>
-<br>
 
     <main>
-        <section class="main-card">
-            <div class="info">
-                <h2>Project 1</h2>
-                <p>HTML/CSS</p>
-            </div>
+
+        <section class="bio" id="about">
+            <aside>About</aside>
+            <p class="para">I find that I will like coding because I like to code and coding is useful and it is fun but most importantly I like coding so coding is good for me. Additionally It is new for me so 
+                it has been fun learning something new but again, most importantly, I like coding. Some day I will put a real bio here once I have put some thought into it but since my portfolio is 
+                blank (for the most part) I will leave this vague silly bio here and get the page working properly.  
+            </p>
         </section>
-        <section class="card">
-            <div class="info">
-                <h2>Project 1</h2>
-                <p>HTML/CSS</p>
-            </div>
+
+        <section class="projects" id="work">        
+            <aside>Work</aside>
+            <section class="main-card">
+                <div class="info">
+                    <h2>Search Engine Optimization</h2>
+                    <p>HTML/CSS</p>
+                </div>
+            </section>
+            <section class="card" id="card-2">
+                <div class="info">
+                    <h2>Render Files webpage</h2>
+                    <p>HTML/CSS/JavaScript</p>
+                </div>
+            </section>
+            <section class="card" id="card-3">
+                <div class="info">
+                    <h2>Project 3</h2>
+                    <p>HTML/CSS</p>
+                </div>
+            </section>
+            <section class="card" id="card-4">
+                <div class="info">
+                    <h2>Project 4</h2>
+                    <p>HTML/CSS</p>
+                </div>
+            </section>
+            <section class="card" id="card-5">
+                <div class="info">
+                    <h2>Project 5</h2>
+                    <p>HTML/CSS</p>
+                </div>
+            </section>
         </section>
-        <section class="card">
-            <div class="info">
-                <h2>Project 1</h2>
-                <p>HTML/CSS</p>
-            </div>
+        <section id="contact">
+            <aside>Contact</aside>
+            <ul>
+                <li><a href="https://github.com/garrethil" target="_blank">Github</a></li>
+                <li><a href="#"></a>garrethildebrandt@gmail.com</li>
+                <li><a href="#">999-999-9999</a></li>
+            </ul>
         </section>
-        <section class="card">
-            <div class="info">
-                <h2>Project 1</h2>
-                <p>HTML/CSS</p>
-            </div>
-        </section>
-        <section class="card">
-            <div class="info">
-                <h2>Project 1</h2>
-                <p>HTML/CSS</p>
-            </div>
-        </section>
+
     </main>
 
     
